examples/avm-res-web-site/0.21.8/submodules/config_authsettings/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# config\_authsettings submodule

This submodule manages the authentication settings configuration (`Microsoft.Web/sites/config`, name: `authsettings`) for an Azure App Service site.

It can be used independently to configure authentication (v1) settings on an existing site.

> **Note:** This resource is deprecated. Use `config_authsettingsv2` for new deployments.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

## Resources

The following resources are used by this module:

- [azapi_update_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the App Service site.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_active_directory"></a> [active\_directory](#input\_active\_directory)

Description: Active Directory authentication configuration.

- `client_id` - (Optional) The Client ID of the Azure AD application.
- `allowed_audiences` - (Optional) A list of allowed audience values.
- `client_secret` - (Optional) The Client Secret of the Azure AD application.
- `client_secret_setting_name` - (Optional) The app setting name that contains the client secret.

Type:

```hcl
object({
    client_id                  = optional(string)
    allowed_audiences          = optional(list(string))
    client_secret              = optional(string)
    client_secret_setting_name = optional(string)
  })
```

Default: `null`

### <a name="input_additional_login_parameters"></a> [additional\_login\_parameters](#input\_additional\_login\_parameters)

Description: A map of additional login parameters.

Type: `map(string)`

Default: `null`

### <a name="input_allowed_external_redirect_urls"></a> [allowed\_external\_redirect\_urls](#input\_allowed\_external\_redirect\_urls)

Description: A list of allowed external redirect URLs.

Type: `list(string)`

Default: `null`

### <a name="input_default_provider"></a> [default\_provider](#input\_default\_provider)

Description: The default authentication provider.

Type: `string`

Default: `null`

### <a name="input_enabled"></a> [enabled](#input\_enabled)

Description: Is authentication enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_facebook"></a> [facebook](#input\_facebook)

Description: Facebook authentication configuration.

- `app_id` - (Optional) The App ID of the Facebook application.
- `app_secret` - (Optional) The App Secret of the Facebook application.
- `app_secret_setting_name` - (Optional) The app setting name that contains the app secret.
- `oauth_scopes` - (Optional) A list of OAuth scopes to request.

Type:

```hcl
object({
    app_id                  = optional(string)
    app_secret              = optional(string)
    app_secret_setting_name = optional(string)
    oauth_scopes            = optional(list(string))
  })
```

Default: `null`

### <a name="input_github"></a> [github](#input\_github)

Description: GitHub authentication configuration.

- `client_id` - (Optional) The Client ID of the GitHub application.
- `client_secret` - (Optional) The Client Secret of the GitHub application.
- `client_secret_setting_name` - (Optional) The app setting name that contains the client secret.
- `oauth_scopes` - (Optional) A list of OAuth scopes to request.

Type:

```hcl
object({
    client_id                  = optional(string)
    client_secret              = optional(string)
    client_secret_setting_name = optional(string)
    oauth_scopes               = optional(list(string))
  })
```

Default: `null`

### <a name="input_google"></a> [google](#input\_google)

Description: Google authentication configuration.

- `client_id` - (Optional) The Client ID of the Google application.
- `client_secret` - (Optional) The Client Secret of the Google application.
- `client_secret_setting_name` - (Optional) The app setting name that contains the client secret.
- `oauth_scopes` - (Optional) A list of OAuth scopes to request.

Type:

```hcl
object({
    client_id                  = optional(string)
    client_secret              = optional(string)
    client_secret_setting_name = optional(string)
    oauth_scopes               = optional(list(string))
  })
```

Default: `null`

### <a name="input_issuer"></a> [issuer](#input\_issuer)

Description: The issuer URI.

Type: `string`

Default: `null`

### <a name="input_microsoft"></a> [microsoft](#input\_microsoft)

Description: Microsoft authentication configuration.

- `client_id` - (Optional) The Client ID of the Microsoft application.
- `client_secret` - (Optional) The Client Secret of the Microsoft application.
- `client_secret_setting_name` - (Optional) The app setting name that contains the client secret.
- `oauth_scopes` - (Optional) A list of OAuth scopes to request.

Type:

```hcl
object({
    client_id                  = optional(string)
    client_secret              = optional(string)
    client_secret_setting_name = optional(string)
    oauth_scopes               = optional(list(string))
  })
```

Default: `null`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: Retry configuration for azapi resources.

Type:

```hcl
object({
    error_message_regex = list(string)
    interval_seconds    = optional(number, 10)
    max_retries         = optional(number, 3)
  })
```

Default:

```json
{
  "error_message_regex": [
    "Cannot modify this site because another operation is in progress"
  ]
}
```

### <a name="input_runtime_version"></a> [runtime\_version](#input\_runtime\_version)

Description: The runtime version of the authentication module.

Type: `string`

Default: `null`

### <a name="input_token_refresh_extension_hours"></a> [token\_refresh\_extension\_hours](#input\_token\_refresh\_extension\_hours)

Description: Hours before token expiry to refresh. Defaults to `72`.

Type: `number`

Default: `72`

### <a name="input_token_store_enabled"></a> [token\_store\_enabled](#input\_token\_store\_enabled)

Description: Should the token store be enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_twitter"></a> [twitter](#input\_twitter)

Description: Twitter authentication configuration.

- `consumer_key` - (Optional) The consumer key of the Twitter application.
- `consumer_secret` - (Optional) The consumer secret of the Twitter application.
- `consumer_secret_setting_name` - (Optional) The app setting name that contains the consumer secret.

Type:

```hcl
object({
    consumer_key                 = optional(string)
    consumer_secret              = optional(string)
    consumer_secret_setting_name = optional(string)
  })
```

Default: `null`

### <a name="input_unauthenticated_client_action"></a> [unauthenticated\_client\_action](#input\_unauthenticated\_client\_action)

Description: The action to take for unauthenticated requests.

Type: `string`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the config resource.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: The full resource object.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the config resource.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft's privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
